  only count %[] conversions in *scanf if they matched at least one char
    (Indan Zupancic)
  make sure __sc_nr_cpus does not dump core if /proc/cpuinfo is larger
    than 2048 bytes (Bela Lubkin)
  use vsyscall for time on x86_64 instead of wrapping gettimeofday (Nikola Vladov)
  CPU affinity support (Indan Zupancic)
  lots of ARM fixes (Enrico Scholz)

0.32:
  add mbsinit, mbrlen, mbtowc, wctomb, mbrtowc, wcrtomb, wcwidth
  add btowc, wctype, iswctype
  add some wide char routines
  add statvfs, fstatvfs
  add some amd64 asm string routines
  add some constants for inotify
  several fixes from Enrico Scholz (printf, string routines on big endian)
  add some more syscalls
  some minor cleanups
  shrink some string functions (Kris Katterjohn)
  prepare x86_64 for syscall numbers > 255
  fix unaligned memcpy if WANT_SMALL_STRING_ROUTINES is not defined
    (Enrico Scholz)
  fix utmp, add utmpx support (R.L. Horn)
  fix the dynamic library for the ARM architecture (Gernot Tenchio)
  get ARM port to work with EABI (Tristan Newby)
  fix of scanf with negative floats (Andre Oliveira)
  use vsyscall to do time(2) on x86-64
  implement back references in basic regexes
  make regex faster (coalesce n CHAR matches to one STRING match)
  stdio speedup
  use randomness passed in ELF auxvec instead of /dev/urandom in startup
    (strace looks cleaner now)
  use ELF auxvec to implement getpagesize
  support thread local storage (w00t!!!!)
  don't crash in getaddrinfo if hints is NULL (Gernot Tenchio)
  add -D_REENTRANT for -pthread in diet
  don't segfault in setlocale if locale is NULL (Nikola Vladov)
  implement _SC_PHYS_PAGES in sysconf()
  add some gcc attributes and restrict keywords to string.h

0.31:
  getopt_long and getopt_long_only now refuse ambiguous abbreviations
  fix printf %u/%x on 64-bit platforms
  fix fd leak in if_nameindex (Florian Westphal)
  fix printf %g (well, get closer)
  fix sparc64 longjmp (Rene Rebe)
  add dn_skipname