@@ -1,0 +1,30 @@
+t
+elftrunc
+mapfile
+t1
+load
+compile
+bin-alpha
+bin-arm
+bin-i386
+bin-mips
+bin-ppc
+bin-sparc
+bin-mipsel
+bin-parisc
+bin-s390
+bin-sparc64
+pic-alpha
+pic-arm
+pic-i386
+pic-mips
+pic-ppc
+pic-sparc
+pic-mipsel
+pic-parisc
+pic-s390
+pic-sparc64
+bin-ia64
+bin-x86_64
+pic-x86_64
+cycles
