@@ -1,0 +1,14 @@
+tst-fdopen
+tst-ferror
+tst-fileno
+tst-fphex
+tst-fseek
+tst-printf
+tst-sprintf
+tst-sscanf
+tst-tmpnam
+tst-unbputc
+tst-ungetc
+tstdiomisc
+tstgetln
+tstscanf
